--- a/iNeedClass/Classes/iPhone/BackEnd/AddClassTeachViewController.xib
+++ b/iNeedClass/Classes/iPhone/BackEnd/AddClassTeachViewController.xib
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E26a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Montserrat-Bold.ttf">
+            <string>Montserrat-Bold</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddClassTeachViewController">
             <connections>
                 <outlet property="buttonMenu" destination="r7d-o3-nt4" id="L2n-2F-mVR"/>
                 <outlet property="buttonNoMatery" destination="8PZ-US-iS8" id="dKI-3y-OQw"/>
+                <outlet property="buttonOKPrice" destination="yJT-Sh-bM0" id="Oe4-xu-uQi"/>
                 <outlet property="buttonSave" destination="klj-4j-4yw" id="3zF-Rs-bwq"/>
                 <outlet property="buttonSelectTime" destination="wuz-Oc-Nvf" id="j0N-lj-bQi"/>
                 <outlet property="buttonShow" destination="PPX-LN-zrE" id="I3y-6e-tBW"/>
@@ -17,6 +23,9 @@
                 <outlet property="scrollView" destination="OYE-fk-Qyz" id="zdp-Dn-zkp"/>
                 <outlet property="tableViewCiudades" destination="kjE-Bw-Vqe" id="s8O-g8-Gc9"/>
                 <outlet property="tableViewMaterias" destination="5Jz-8g-rKF" id="4ar-Lt-c9Y"/>
+                <outlet property="textCiudad" destination="Spy-S1-eGO" id="ziX-72-5jq"/>
+                <outlet property="textMaterias" destination="ev3-b4-49n" id="DVr-0r-4KP"/>
+                <outlet property="textPrice" destination="CFg-L6-eoG" id="Ioz-H3-ySS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -169,16 +178,7 @@
                                 <outlet property="delegate" destination="-1" id="qST-ZH-FMB"/>
                             </connections>
                         </textField>
-                        <pickerView hidden="YES" contentMode="scaleToFill" id="qmf-LW-sRI">
-                            <rect key="frame" x="0.0" y="405" width="320" height="162"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
-                            <connections>
-                                <outlet property="dataSource" destination="-1" id="5Oe-oj-Cjv"/>
-                                <outlet property="delegate" destination="-1" id="1dz-ba-EmU"/>
-                            </connections>
-                        </pickerView>
-                        <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kjE-Bw-Vqe">
+                        <tableView hidden="YES" clipsSubviews="YES" tag="4" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kjE-Bw-Vqe">
                             <rect key="frame" x="14" y="398" width="290" height="150"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -187,7 +187,7 @@
                                 <outlet property="delegate" destination="-1" id="CRI-GR-BAQ"/>
                             </connections>
                         </tableView>
-                        <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5Jz-8g-rKF">
+                        <tableView hidden="YES" clipsSubviews="YES" tag="1" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5Jz-8g-rKF">
                             <rect key="frame" x="14" y="131" width="290" height="150"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -196,6 +196,27 @@
                                 <outlet property="delegate" destination="-1" id="yva-Nm-h8C"/>
                             </connections>
                         </tableView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yJT-Sh-bM0">
+                            <rect key="frame" x="202" y="263" width="102" height="29"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="16"/>
+                            <state key="normal" title="OK">
+                                <color key="titleColor" white="0.96906828700000003" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="downKeyBoard:" destination="-1" eventType="touchUpInside" id="3Oq-J4-mXS"/>
+                            </connections>
+                        </button>
+                        <pickerView hidden="YES" contentMode="scaleToFill" id="qmf-LW-sRI">
+                            <rect key="frame" x="0.0" y="234" width="320" height="162"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="5Oe-oj-Cjv"/>
+                                <outlet property="delegate" destination="-1" id="1dz-ba-EmU"/>
+                            </connections>
+                        </pickerView>
                     </subviews>
                     <connections>
                         <outlet property="delegate" destination="-1" id="cWx-br-QMn"/>
