--- a/iNeedClass/Classes/iPhone/About/AboutViewController.xib
+++ b/iNeedClass/Classes/iPhone/About/AboutViewController.xib
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14D105g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F6a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AboutViewController">
             <connections>
                 <outlet property="PrincipalView" destination="TuX-Ic-Pvd" id="Sse-6C-Tz8"/>
                 <outlet property="agrees" destination="akA-hb-T7J" id="lgJ-dE-uyL"/>
-                <outlet property="appFriend" destination="j4i-6x-F8F" id="3Ou-8w-APw"/>
-                <outlet property="appFriendDescription" destination="NGf-C0-n2H" id="7JS-OJ-K8Q"/>
                 <outlet property="byME" destination="zUa-aD-ZVO" id="FyW-RW-eXc"/>
                 <outlet property="designFreepik" destination="Sg5-QK-4K7" id="iQ9-Ex-fSZ"/>
                 <outlet property="titleLabel" destination="7cf-z0-pcR" id="9eH-3e-PgZ"/>
                 <outlet property="tituloFreepik" destination="qCG-Ml-MPV" id="oGQ-Q6-1IF"/>
+                <outlet property="view" destination="hXH-PC-G0o" id="VL8-yP-mPz"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -50,19 +49,6 @@
                                     <rect key="frame" x="17" y="95" width="255" height="43"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="13"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aplicaciones compañeras:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j4i-6x-F8F">
-                                    <rect key="frame" x="17" y="204" width="203" height="21"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QuickCofrade (Android) TicTac Cofrade (Android)" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NGf-C0-n2H">
-                                    <rect key="frame" x="33" y="219" width="171" height="48"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
-                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6dw-p6-JGb">
