--- a/iNeedClass/Classes/iPhone/BackEnd/AddClassAlumnViewController.xib
+++ b/iNeedClass/Classes/iPhone/BackEnd/AddClassAlumnViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F6a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -15,9 +15,9 @@
                 <outlet property="buttonMenu" destination="xX6-cx-BiK" id="hAH-ob-QXv"/>
                 <outlet property="buttonNoMatery" destination="2Gp-d2-ZPJ" id="uwi-wR-umX"/>
                 <outlet property="buttonOKPrice" destination="Vcb-2G-SVA" id="R2z-Ty-Pwg"/>
-                <outlet property="buttonSave" destination="Izc-tc-04x" id="aTG-Py-6SW"/>
+                <outlet property="buttonSave" destination="Izc-tc-04x" id="gZK-dv-hyi"/>
                 <outlet property="buttonSelectTime" destination="rNa-0H-siH" id="9mz-9D-ctG"/>
-                <outlet property="buttonShow" destination="tTH-Mz-yau" id="CUh-xR-FCs"/>
+                <outlet property="buttonShow" destination="tTH-Mz-yau" id="o5v-KR-Sai"/>
                 <outlet property="labelTitle" destination="OvX-oA-46a" id="yMA-L6-k9B"/>
                 <outlet property="pickerHorario" destination="XfQ-j6-4x6" id="vf9-TN-Ts3"/>
                 <outlet property="scrollView" destination="aDG-fs-s4e" id="ruB-nQ-v0T"/>
